[metadata]
name = mikan
version = attr: mikan.__version__
url = https://github.com/dzzhvks94vd2/mikan
license = MIT
author = dzzhvks94vd2
author_email = dzzhvks94vd2@protonmail.com
description = A Japanese language manipulation library
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: Japanese
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = mikan
python_requires = >= 3.9
